# PC-Monitor-Linux

./: diagram.json  gc9a01.chip.json  sdkconfig.defaults  wokwi.toml
linux_client/: HEADLESS.md  pc_monitor.py  requirements.txt  test_comm.py
linux_client/systemd/: 99-scarab-monitor.rules  scarab-monitor.service
main/: CMakeLists.txt  gui_settings.c  gui_settings.h  idf_component.yml  lvgl_gc9a01_driver.c  lvgl_gc9a01_driver.h  main_lvgl.c
main/core/: system_types.h
main/drivers/: usb_serial_comm.c
main/screens/: screen_split_ring.c  screen_split_ring.h  screen_unified_lvgl.c  screens_lvgl.h
main/ui/: ui_manager.c  ui_manager.h
