idf_component_register(
    SRCS
        # Main application
        "main_lvgl.c"

        # Drivers
        "lvgl_gc9a01_driver.c"
        "drivers/usb_serial_comm.c"

        # Storage modules
        "storage/storage_mgr.c"
        "storage/hw_identity.c"
        "gui_settings.c"

        # UI modules
        "ui/ui_manager.c"
        "ui/screensaver_mgr.c"

        # Screen implementations
        "screens/screen_unified_lvgl.c"
        "screens/screen_split_ring.c"

        # Compiled images (system icons - Desert-Spec v2.2)
        "images/CPU.c"
        "images/GPU.c"
        "images/RAM.c"
        "images/NET.c"

    INCLUDE_DIRS
        "."
        "core"
        "screens"
        "storage"
        "drivers"
        "ui"

    REQUIRES
        lvgl
        esp_lcd
        driver
        esp_driver_usb_serial_jtag
)

littlefs_create_partition_image(storage lfs FLASH_IN_PROJECT)
